lang/tests/compile_fail/pod_vec_n_exceeds_pfx.stderr
error[E0080]: evaluation panicked: PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length prefix
  --> /tmp/zeropod/zeropod/src/pod/vec.rs:32:9
   |
32 | /         assert!(
33 | |             N <= max_n_for_pfx(PFX),
34 | |             "PodVec<T, N, PFX>: N exceeds the maximum value representable by the PFX-byte length \
35 | |              prefix"
36 | |         );
   | |_________^ evaluation of `quasar_lang::Vec::<u8, 300, 1>::_CAP_CHECK` failed here

note: erroneous constant encountered
  --> /tmp/zeropod/zeropod/src/pod/vec.rs:39:27
   |
39 |     pub const VALID: () = Self::_CAP_CHECK;
   |                           ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_vec_n_exceeds_pfx.rs:6:15
  |
6 | const _: () = PodVec::<u8, 300, 1>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
